Fixed header stretch to fill width in column mode

--- a/public/styles/sass/_media.scss
+++ b/public/styles/sass/_media.scss
@@ -11,6 +11,10 @@
     flex-direction:   column;
   }
 
+  header {
+    align-self:       stretch;
+  }
+
 }
 
 
